[package]
name = "custom-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
data-encoding = "2.6.0"
num-bigint = "0.4.6"
ring = "0.17.8"
# serde = "1.0.210"
# serde_derive = "1.0.210"
serde = { version = "1.0.132", features = ["derive"] }
sled = "0.34.7"

uuid = { version = "1.10.0", features = ["v4"] }
# serde = { version = "1.0.210", default-features = false, features = [
#     "derive",
# ], optional = true }
