[package]
name = "custom-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.20"
data-encoding = "2.6.0"
env_logger = "0.11.5"
log = "0.4.22"
num-bigint = "0.4.6"
once_cell = "1.20.2"
ring = "0.16.20"
rust-crypto = "0.2.36"
# serde = "1.0.210"
# serde_derive = "1.0.210"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.128"
sled = "0.34.7"
structopt = "0.3.26"

uuid = { version = "1.10.0", features = ["v4"] }
# serde = { version = "1.0.210", default-features = false, features = [
#     "derive",
# ], optional = true }
